# test_task_ursa_team

./: .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  nginx.conf  pyproject.toml
tests/: test_main.py
